--- a/packages/palette/package.json
+++ b/packages/palette/package.json
@@ -7,7 +7,7 @@
     "url": "git@github.com:neetly/design-system.git",
     "directory": "packages/palette"
   },
-  "license": "MIT",
+  "license": "Apache-2.0",
   "main": "./lib/index.js",
   "style": "./lib/index.scss",
   "files": [
