--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "license": "Apache-2.0",
   "scripts": {
+    "start": "yarn workspace @neetly/design-system-website start",
     "build": "yarn workspaces foreach --verbose run build",
     "clean": "yarn workspaces foreach --verbose run clean",
     "lint": "eslint --max-warnings 0 . && prettier --check .",
