--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -14,9 +14,11 @@
     "clean": "app clean"
   },
   "dependencies": {
+    "@neetly/palette": "workspace:packages/palette",
     "@neetly/router": "^1.1.0",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "core-js": "^3.20.3",
     "react": "18.0.0-rc.0",
     "react-dom": "18.0.0-rc.0"
   },
