--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -10,8 +10,14 @@
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "types": ["@buncho/builder", "react/next", "react-dom/next"],
 
-    "plugins": [{ "name": "typescript-plugin-css-modules" }]
+    "plugins": [{ "name": "typescript-plugin-css-modules" }],
+
+    // Make typescript-plugin-css-modules happy
+    "baseUrl": ".",
+    "paths": {
+      "@neetly/palette": ["../palette/src/index.scss"]
+    }
   },
 
-  "references": []
+  "references": [{ "path": "../palette" }]
 }
