--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@neetly/design-system-website",
+  "name": "@neetly/design-website",
   "private": true,
-  "homepage": "https://github.com/neetly/design-system",
+  "homepage": "https://github.com/neetly/design",
   "repository": {
     "type": "git",
-    "url": "git@github.com:neetly/design-system.git",
+    "url": "git@github.com:neetly/design.git",
     "directory": "packages/website"
   },
   "license": "Apache-2.0",
@@ -18,6 +18,7 @@
     "@neetly/router": "^1.1.0",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "classnames": "^2.3.1",
     "core-js": "^3.20.3",
     "react": "18.0.0-rc.0",
     "react-dom": "18.0.0-rc.0"
