--- a/data/palette.yaml
+++ b/data/palette.yaml
@@ -1,3 +1,75 @@
+- name: Primary/10
+  color: "#fffbf9"
+- name: Primary/20
+  color: "#fff8f5"
+- name: Primary/50
+  color: "#ffede8"
+- name: Primary/100
+  color: "#ffdad2"
+- name: Primary/200
+  color: "#ffb4a7"
+- name: Primary/300
+  color: "#ff8a7c"
+- name: Primary/400
+  color: "#ec665a"
+- name: Primary/500
+  color: "#cf493f"
+- name: Primary/600
+  color: "#b32a24"
+- name: Primary/700
+  color: "#930004"
+- name: Primary/800
+  color: "#690001"
+- name: Primary/900
+  color: "#410000"
+- name: Secondary/10
+  color: "#fffbf9"
+- name: Secondary/20
+  color: "#fff8f5"
+- name: Secondary/50
+  color: "#ffede8"
+- name: Secondary/100
+  color: "#ffdad5"
+- name: Secondary/200
+  color: "#ebbbb5"
+- name: Secondary/300
+  color: "#d0a09a"
+- name: Secondary/400
+  color: "#b5857f"
+- name: Secondary/500
+  color: "#9c6b65"
+- name: Secondary/600
+  color: "#83514b"
+- name: Secondary/700
+  color: "#6b3933"
+- name: Secondary/800
+  color: "#53211c"
+- name: Secondary/900
+  color: "#3c0705"
+- name: Tertiary/10
+  color: "#f5ffed"
+- name: Tertiary/20
+  color: "#eaffe1"
+- name: Tertiary/50
+  color: "#d8facf"
+- name: Tertiary/100
+  color: "#c9ecc1"
+- name: Tertiary/200
+  color: "#acd0a4"
+- name: Tertiary/300
+  color: "#8fb588"
+- name: Tertiary/400
+  color: "#729b6c"
+- name: Tertiary/500
+  color: "#568251"
+- name: Tertiary/600
+  color: "#396936"
+- name: Tertiary/700
+  color: "#18521a"
+- name: Tertiary/800
+  color: "#003a01"
+- name: Tertiary/900
+  color: "#002200"
 - name: Neutral/10
   color: "#fffbfa"
 - name: Neutral/20
