--- a/packages/unstyled/package.json
+++ b/packages/unstyled/package.json
@@ -17,5 +17,12 @@
     "build": "lib build",
     "clean": "lib clean",
     "prepack": "run clean && run build && cp ../../LICENSE ."
+  },
+  "peerDependencies": {
+    "ariakit": "*"
+  },
+  "devDependencies": {
+    "@buncho/builder": "^4.0.0",
+    "ariakit": "2.0.0-alpha.18"
   }
 }
