--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -18,6 +18,7 @@
     "@neetly/router": "^1.2.0",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "ariakit": "2.0.0-alpha.18",
     "core-js": "^3.21.0",
     "react": "18.0.0-rc.0",
     "react-dom": "18.0.0-rc.0"
