Add publish script

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build": "yarn workspaces foreach --verbose run build",
     "clean": "yarn workspaces foreach --verbose run clean",
     "lint": "eslint --max-warnings 0 . && prettier --check .",
-    "lint:fix": "eslint --max-warnings 0 --fix . && prettier --write ."
+    "lint:fix": "eslint --max-warnings 0 --fix . && prettier --write .",
+    "publish": "yarn workspaces foreach --verbose --no-private npm publish --tolerate-republish"
   },
   "devDependencies": {
     "@buncho/eslint-config": "^4.0.0",
