--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,7 @@
 nodeLinker: node-modules
 
+npmPublishAccess: public
+
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-constraints.cjs
     spec: "@yarnpkg/plugin-constraints"
