--- a/.prettierignore
+++ b/.prettierignore
@@ -11,6 +11,8 @@
 
 # Artifacts
 
+/packages/*/package.tgz
+/packages/*/LICENSE
 /packages/*/tsconfig.tsbuildinfo
 /packages/*/lib/
 /packages/*/build/
