--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "@neetly/palette",
-  "version": "1.0.0",
+  "name": "@neetly/icons",
+  "version": "0.0.0",
   "homepage": "https://github.com/neetly/design",
   "repository": {
     "type": "git",
     "url": "git@github.com:neetly/design.git",
-    "directory": "packages/palette"
+    "directory": "packages/icons"
   },
   "license": "Apache-2.0",
   "main": "./lib/index.js",
-  "style": "./lib/index.scss",
   "files": [
     "./lib"
   ],
@@ -20,6 +19,7 @@
     "prepack": "run clean && run build && cp ../../LICENSE ."
   },
   "devDependencies": {
-    "@buncho/builder": "^4.0.0"
+    "@buncho/builder": "^4.0.0",
+    "@svgr/cli": "^6.2.1"
   }
 }
