--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@buncho/builder": "^4.0.0",
-    "@svgr/cli": "^6.2.1"
+    "@svgr/cli": "^6.2.1",
+    "typescript": "^4.6.2"
   }
 }
