--- a/packages/palette/package.json
+++ b/packages/palette/package.json
@@ -20,6 +20,7 @@
     "prepack": "run clean && run build && cp ../../LICENSE ."
   },
   "devDependencies": {
-    "@buncho/builder": "^4.0.0"
+    "@buncho/builder": "^4.0.0",
+    "typescript": "^4.6.2"
   }
 }
