--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.0.0-rc.1"
   },
   "devDependencies": {
-    "@buncho/builder": "^4.0.0"
+    "@buncho/builder": "^4.0.0",
+    "typescript": "^4.6.2"
   }
 }
