--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "@typescript-eslint/parser": "^5.13.0",
     "eslint": "^8.10.0",
     "prettier": "^2.5.1",
-    "typescript": "^4.6.2",
-    "typescript-plugin-css-modules": "^3.4.0"
+    "typescript": "^4.6.2"
   },
   "packageManager": "yarn@3.2.0"
 }
