--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@buncho/builder": "^4.0.0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
