--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -21,11 +21,11 @@
     "@types/react-dom": "^17.0.14",
     "ariakit": "2.0.0-alpha.20",
     "core-js": "^3.21.1",
-    "react": "18.0.0-rc.3",
-    "react-dom": "18.0.0-rc.3"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@buncho/builder": "^4.0.0",
+    "@buncho/builder": "^5.0.0",
     "typescript": "^4.6.3",
     "typescript-plugin-css-modules": "^3.4.0"
   }
