--- a/packages/palette/package.json
+++ b/packages/palette/package.json
@@ -9,6 +9,7 @@
   },
   "license": "Apache-2.0",
   "main": "./lib/index.js",
+  "style": "./lib/index.css",
   "sass": "./lib/index.scss",
   "files": [
     "./lib"
