--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -18,9 +18,27 @@
     "codegen": "./scripts/codegen.sh",
     "prepack": "run clean && run build && cp ../../LICENSE ."
   },
+  "peerDependencies": {
+    "@types/react": "*",
+    "@types/react-dom": "*",
+    "react": "*",
+    "react-dom": "*"
+  },
+  "peerDependenciesMeta": {
+    "@types/react": {
+      "optional": true
+    },
+    "@types/react-dom": {
+      "optional": true
+    }
+  },
   "devDependencies": {
     "@buncho/builder": "^5.0.1",
     "@svgr/cli": "^6.2.1",
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "typescript": "^4.6.3"
   }
 }
