--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,6 +17,9 @@
     "clean": "lib clean",
     "prepack": "run clean && run build && cp ../../LICENSE ."
   },
+  "dependencies": {
+    "@radix-ui/react-visually-hidden": "^0.1.4"
+  },
   "peerDependencies": {
     "@types/react": "*",
     "@types/react-dom": "*",
