--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -19,5 +19,9 @@
     }
   },
 
-  "references": [{ "path": "../palette" }, { "path": "../icons" }]
+  "references": [
+    { "path": "../palette" },
+    { "path": "../icons" },
+    { "path": "../ui" }
+  ]
 }
