--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -17,9 +17,9 @@
     "@neetly/icons": "workspace:packages/icons",
     "@neetly/palette": "workspace:packages/palette",
     "@neetly/router": "^1.3.0",
+    "@neetly/ui": "workspace:^",
     "@types/react": "^18.0.4",
     "@types/react-dom": "^18.0.0",
-    "ariakit": "2.0.0-next.22",
     "core-js": "^3.21.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
