--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -17,7 +17,7 @@
     "@neetly/icons": "workspace:packages/icons",
     "@neetly/palette": "workspace:packages/palette",
     "@neetly/router": "^1.3.0",
-    "@neetly/ui": "workspace:^",
+    "@neetly/ui": "workspace:packages/ui",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.0",
     "core-js": "^3.21.1",
