--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neetly/ui",
-  "private": true,
+  "version": "0.1.0",
   "homepage": "https://github.com/neetly/design",
   "repository": {
     "type": "git",
