--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -18,6 +18,7 @@
     "@neetly/palette": "workspace:packages/palette",
     "@neetly/router": "^1.3.0",
     "@neetly/ui": "workspace:packages/ui",
+    "@radix-ui/react-tooltip": "0.1.8-rc.8",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
     "array.prototype.groupby": "^1.1.0",
