--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,9 +18,12 @@
     "prepack": "run clean && run build && cp ../../LICENSE ."
   },
   "dependencies": {
+    "@neetly/theme": "workspace:packages/theme",
     "@radix-ui/react-visually-hidden": "^0.1.4"
   },
   "peerDependencies": {
+    "@neetly/icons": "*",
+    "@neetly/palette": "*",
     "@types/react": "*",
     "@types/react-dom": "*",
     "react": "*",
@@ -36,10 +39,13 @@
   },
   "devDependencies": {
     "@buncho/builder": "^5.1.0",
+    "@neetly/icons": "workspace:packages/icons",
+    "@neetly/palette": "workspace:packages/palette",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
