--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -18,9 +18,9 @@
     "@neetly/palette": "workspace:packages/palette",
     "@neetly/router": "^1.3.0",
     "@neetly/ui": "workspace:packages/ui",
-    "@radix-ui/react-tooltip": "0.1.8-rc.8",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
+    "ariakit": "2.0.0-next.22",
     "array.prototype.groupby": "^1.1.0",
     "array.prototype.groupbytomap": "^1.1.0",
     "react": "^18.0.0",
