--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "@neetly/theme": "workspace:packages/theme",
-    "ariakit": "2.0.0-next.22"
+    "ariakit": "2.0.0-next.22",
+    "classnames": "^2.3.1"
   },
   "peerDependencies": {
     "@neetly/icons": "*",
