Re-generate color palette

--- a/data/palette.yaml
+++ b/data/palette.yaml
@@ -9,19 +9,19 @@
 - name: Primary/200
   color: "#ffb4a7"
 - name: Primary/300
-  color: "#ff8a7c"
+  color: "#fb8c80"
 - name: Primary/400
-  color: "#ec665a"
+  color: "#db7368"
 - name: Primary/500
-  color: "#cf493f"
+  color: "#bb5a50"
 - name: Primary/600
-  color: "#b32a24"
+  color: "#9b423a"
 - name: Primary/700
-  color: "#930004"
+  color: "#7d2c25"
 - name: Primary/800
-  color: "#690001"
+  color: "#5f1511"
 - name: Primary/900
-  color: "#410000"
+  color: "#400102"
 - name: Secondary/10
   color: "#fffbf9"
 - name: Secondary/20
@@ -31,93 +31,93 @@
 - name: Secondary/100
   color: "#ffdad5"
 - name: Secondary/200
-  color: "#ebbbb5"
+  color: "#e5bdb8"
 - name: Secondary/300
-  color: "#d0a09a"
+  color: "#c8a29e"
 - name: Secondary/400
-  color: "#b5857f"
+  color: "#ac8884"
 - name: Secondary/500
-  color: "#9c6b65"
+  color: "#906f6b"
 - name: Secondary/600
-  color: "#83514b"
+  color: "#765753"
 - name: Secondary/700
-  color: "#6b3933"
+  color: "#5c3f3c"
 - name: Secondary/800
-  color: "#53211c"
+  color: "#432a27"
 - name: Secondary/900
-  color: "#3c0705"
+  color: "#2c1513"
 - name: Tertiary/10
-  color: "#f5ffed"
+  color: "#f4fff1"
 - name: Tertiary/20
-  color: "#eaffe1"
+  color: "#e9ffe4"
 - name: Tertiary/50
-  color: "#d8facf"
+  color: "#d7fad2"
 - name: Tertiary/100
-  color: "#c9ecc1"
+  color: "#c9ecc5"
 - name: Tertiary/200
-  color: "#acd0a4"
+  color: "#aecfaa"
 - name: Tertiary/300
-  color: "#8fb588"
+  color: "#93b490"
 - name: Tertiary/400
-  color: "#729b6c"
+  color: "#799976"
 - name: Tertiary/500
-  color: "#568251"
+  color: "#617f5e"
 - name: Tertiary/600
-  color: "#396936"
+  color: "#496547"
 - name: Tertiary/700
-  color: "#18521a"
+  color: "#324d31"
 - name: Tertiary/800
-  color: "#003a01"
+  color: "#1d361c"
 - name: Tertiary/900
-  color: "#002200"
+  color: "#082009"
 - name: Neutral/10
   color: "#fffbfa"
 - name: Neutral/20
   color: "#fff8f6"
 - name: Neutral/50
-  color: "#fceeec"
+  color: "#f8eeed"
 - name: Neutral/100
-  color: "#eddfdd"
+  color: "#e9e0df"
 - name: Neutral/200
-  color: "#d1c3c1"
+  color: "#cdc4c3"
 - name: Neutral/300
-  color: "#b5a8a6"
+  color: "#b2a9a8"
 - name: Neutral/400
-  color: "#9b8e8c"
+  color: "#978f8e"
 - name: Neutral/500
-  color: "#827472"
+  color: "#7d7574"
 - name: Neutral/600
-  color: "#695b5a"
+  color: "#645d5c"
 - name: Neutral/700
-  color: "#514442"
+  color: "#4c4544"
 - name: Neutral/800
-  color: "#3b2d2c"
+  color: "#352f2e"
 - name: Neutral/900
-  color: "#271816"
+  color: "#201a1a"
 - name: Neutral Variant/10
   color: "#fffbf9"
 - name: Neutral Variant/20
-  color: "#fff8f5"
+  color: "#fff8f6"
 - name: Neutral Variant/50
   color: "#ffedea"
 - name: Neutral Variant/100
-  color: "#f6ddda"
+  color: "#f2dedc"
 - name: Neutral Variant/200
-  color: "#dac1be"
+  color: "#d5c2c0"
 - name: Neutral Variant/300
-  color: "#bea5a2"
+  color: "#b9a7a5"
 - name: Neutral Variant/400
-  color: "#a48b88"
+  color: "#9e8d8b"
 - name: Neutral Variant/500
-  color: "#8a716e"
+  color: "#837371"
 - name: Neutral Variant/600
-  color: "#725855"
+  color: "#6b5b59"
 - name: Neutral Variant/700
-  color: "#5b403d"
+  color: "#524342"
 - name: Neutral Variant/800
-  color: "#442926"
+  color: "#3a2d2c"
 - name: Neutral Variant/900
-  color: "#2f1310"
+  color: "#241917"
 - name: Red/10
   color: "#fffbf9"
 - name: Red/20
@@ -129,161 +129,161 @@
 - name: Red/200
   color: "#ffb4a7"
 - name: Red/300
-  color: "#ff8a7c"
+  color: "#fb8c80"
 - name: Red/400
-  color: "#ec665a"
+  color: "#db7368"
 - name: Red/500
-  color: "#cf493f"
+  color: "#bb5a50"
 - name: Red/600
-  color: "#b32a24"
+  color: "#9b423a"
 - name: Red/700
-  color: "#930004"
+  color: "#7d2c25"
 - name: Red/800
-  color: "#690001"
+  color: "#5f1511"
 - name: Red/900
-  color: "#410000"
+  color: "#400102"
 - name: Orange/10
-  color: "#fffbf8"
+  color: "#fffbf7"
 - name: Orange/20
-  color: "#fff8f3"
+  color: "#fff8f2"
 - name: Orange/50
-  color: "#ffede2"
+  color: "#ffede1"
 - name: Orange/100
-  color: "#ffdbc7"
+  color: "#ffdbc6"
 - name: Orange/200
-  color: "#ffb68e"
+  color: "#ffb68d"
 - name: Orange/300
-  color: "#ff8d4b"
+  color: "#f6925c"
 - name: Orange/400
-  color: "#e66e27"
+  color: "#d67845"
 - name: Orange/500
-  color: "#c95200"
+  color: "#b65f2e"
 - name: Orange/600
-  color: "#a24000"
+  color: "#974718"
 - name: Orange/700
-  color: "#7b2e00"
+  color: "#793101"
 - name: Orange/800
-  color: "#571e00"
+  color: "#571f00"
 - name: Orange/900
   color: "#351000"
 - name: Amber/10
-  color: "#fffbf7"
+  color: "#fffcf5"
 - name: Amber/20
-  color: "#fff8ef"
+  color: "#fff8ec"
 - name: Amber/50
-  color: "#ffeed9"
+  color: "#ffeed5"
 - name: Amber/100
-  color: "#ffddb2"
+  color: "#ffddaf"
 - name: Amber/200
-  color: "#ffb958"
+  color: "#ffb954"
 - name: Amber/300
-  color: "#ef9800"
+  color: "#e49c38"
 - name: Amber/400
-  color: "#cd7f00"
+  color: "#c5821e"
 - name: Amber/500
-  color: "#a96800"
+  color: "#a76a00"
 - name: Amber/600
-  color: "#875200"
+  color: "#875300"
 - name: Amber/700
-  color: "#673d00"
+  color: "#663d00"
 - name: Amber/800
-  color: "#482900"
+  color: "#482a00"
 - name: Amber/900
   color: "#2c1700"
 - name: Yellow/10
-  color: "#fffcf6"
+  color: "#fffcec"
 - name: Yellow/20
-  color: "#fff9e9"
+  color: "#fff9e1"
 - name: Yellow/50
-  color: "#fff0c6"
+  color: "#fff0bd"
 - name: Yellow/100
-  color: "#ffe085"
+  color: "#ffe07c"
 - name: Yellow/200
-  color: "#f1c029"
+  color: "#ebc248"
 - name: Yellow/300
-  color: "#d4a400"
+  color: "#cda72f"
 - name: Yellow/400
-  color: "#b58b00"
+  color: "#b08c10"
 - name: Yellow/500
-  color: "#957200"
+  color: "#947200"
 - name: Yellow/600
-  color: "#775a00"
+  color: "#765a00"
 - name: Yellow/700
-  color: "#5a4300"
+  color: "#5a4400"
 - name: Yellow/800
-  color: "#3f2e00"
+  color: "#3e2e00"
 - name: Yellow/900
-  color: "#261a00"
+  color: "#251a00"
 - name: Lime/10
-  color: "#fbffda"
+  color: "#f9ffe1"
 - name: Lime/20
-  color: "#f3ffc1"
+  color: "#f1ffc9"
 - name: Lime/50
-  color: "#dcfe87"
+  color: "#dafe8f"
 - name: Lime/100
-  color: "#cdef77"
+  color: "#ccef83"
 - name: Lime/200
-  color: "#b0d356"
+  color: "#b1d26a"
 - name: Lime/300
-  color: "#94b833"
+  color: "#97b652"
 - name: Lime/400
-  color: "#789d00"
+  color: "#7d9b3a"
 - name: Lime/500
-  color: "#5f8200"
+  color: "#658122"
 - name: Lime/600
-  color: "#4a6700"
+  color: "#4d6704"
 - name: Lime/700
-  color: "#374e00"
+  color: "#364e00"
 - name: Lime/800
-  color: "#243600"
+  color: "#233600"
 - name: Lime/900
-  color: "#131f00"
+  color: "#121f00"
 - name: Green/10
-  color: "#f5ffed"
+  color: "#f4fff1"
 - name: Green/20
-  color: "#eaffe1"
+  color: "#e9ffe4"
 - name: Green/50
-  color: "#c8ffbe"
+  color: "#c6ffc1"
 - name: Green/100
-  color: "#a4f69b"
+  color: "#a7f5a3"
 - name: Green/200
-  color: "#83da7c"
+  color: "#8cd989"
 - name: Green/300
-  color: "#61bf5e"
+  color: "#72bc70"
 - name: Green/400
-  color: "#3ca540"
+  color: "#59a058"
 - name: Green/500
-  color: "#008b1e"
+  color: "#408641"
 - name: Green/600
-  color: "#006e0b"
+  color: "#256c2a"
 - name: Green/700
-  color: "#005305"
+  color: "#055314"
 - name: Green/800
-  color: "#003a01"
+  color: "#003a03"
 - name: Green/900
-  color: "#002200"
+  color: "#012104"
 - name: Teal/10
-  color: "#f1fff9"
+  color: "#f0fffb"
 - name: Teal/20
-  color: "#e4fff4"
+  color: "#e6fff7"
 - name: Teal/50
-  color: "#b7ffe4"
+  color: "#baffe7"
 - name: Teal/100
-  color: "#72faca"
+  color: "#7df9ce"
 - name: Teal/200
-  color: "#41dfae"
+  color: "#5fdcb2"
 - name: Teal/300
-  color: "#00c290"
+  color: "#3fbf97"
 - name: Teal/400
-  color: "#00a478"
+  color: "#13a47e"
 - name: Teal/500
-  color: "#008863"
+  color: "#008864"
 - name: Teal/600
-  color: "#006c4e"
+  color: "#006c4f"
 - name: Teal/700
-  color: "#005139"
+  color: "#00513a"
 - name: Teal/800
-  color: "#003826"
+  color: "#003827"
 - name: Teal/900
   color: "#002115"
 - name: Cyan/10
@@ -291,17 +291,17 @@
 - name: Cyan/20
   color: "#dfffff"
 - name: Cyan/50
-  color: "#a9ffff"
+  color: "#affeff"
 - name: Cyan/100
-  color: "#4ff8fe"
+  color: "#65f7fd"
 - name: Cyan/200
-  color: "#00dce2"
+  color: "#40dae0"
 - name: Cyan/300
-  color: "#00bec5"
+  color: "#00bec4"
 - name: Cyan/400
-  color: "#00a1a8"
+  color: "#00a1a6"
 - name: Cyan/500
-  color: "#00848a"
+  color: "#008489"
 - name: Cyan/600
   color: "#00696e"
 - name: Cyan/700
@@ -311,146 +311,146 @@
 - name: Cyan/900
   color: "#002022"
 - name: Sky/10
-  color: "#f8fdff"
+  color: "#f6fdff"
 - name: Sky/20
-  color: "#f2fbff"
+  color: "#effbff"
 - name: Sky/50
-  color: "#ddf4ff"
+  color: "#ddf5ff"
 - name: Sky/100
   color: "#bae9ff"
 - name: Sky/200
-  color: "#63d3ff"
+  color: "#61d3ff"
 - name: Sky/300
-  color: "#00b8f1"
+  color: "#3ab7e6"
 - name: Sky/400
-  color: "#009ccd"
+  color: "#009cc9"
 - name: Sky/500
   color: "#0080a9"
 - name: Sky/600
-  color: "#006688"
+  color: "#006687"
 - name: Sky/700
-  color: "#004d68"
+  color: "#004d67"
 - name: Sky/800
   color: "#003549"
 - name: Sky/900
   color: "#001e2b"
 - name: Blue/10
-  color: "#fbfcff"
+  color: "#f9fdff"
 - name: Blue/20
-  color: "#f6f9ff"
+  color: "#f4faff"
 - name: Blue/50
-  color: "#e8f1ff"
+  color: "#e5f2ff"
 - name: Blue/100
-  color: "#cfe4ff"
+  color: "#cde5ff"
 - name: Blue/200
-  color: "#9ccaff"
+  color: "#9acaff"
 - name: Blue/300
-  color: "#61b0ff"
+  color: "#6baff9"
 - name: Blue/400
-  color: "#0094fb"
+  color: "#4f94dc"
 - name: Blue/500
-  color: "#0079d3"
+  color: "#307ac0"
 - name: Blue/600
-  color: "#0060aa"
+  color: "#0061a5"
 - name: Blue/700
-  color: "#004882"
+  color: "#004881"
 - name: Blue/800
-  color: "#00315c"
+  color: "#00315b"
 - name: Blue/900
   color: "#001c39"
 - name: Indigo/10
-  color: "#fdfbff"
+  color: "#fafcff"
 - name: Indigo/20
-  color: "#f9f8ff"
+  color: "#f6f9ff"
 - name: Indigo/50
-  color: "#eff0ff"
+  color: "#ebf0ff"
 - name: Indigo/100
-  color: "#dde1ff"
+  color: "#dae1ff"
 - name: Indigo/200
-  color: "#b9c3ff"
+  color: "#b7c4ff"
 - name: Indigo/300
   color: "#96a5ff"
 - name: Indigo/400
-  color: "#7586ff"
+  color: "#7c8be2"
 - name: Indigo/500
-  color: "#5569f3"
+  color: "#6371c6"
 - name: Indigo/600
-  color: "#2f48eb"
+  color: "#4957aa"
 - name: Indigo/700
-  color: "#001be2"
+  color: "#313f90"
 - name: Indigo/800
-  color: "#000ea5"
+  color: "#192679"
 - name: Indigo/900
-  color: "#00046b"
+  color: "#000965"
 - name: Violet/10
-  color: "#fffbff"
+  color: "#fefbff"
 - name: Violet/20
-  color: "#fff7ff"
+  color: "#fdf8ff"
 - name: Violet/50
-  color: "#f8ecff"
+  color: "#f6edff"
 - name: Violet/100
-  color: "#eedbff"
+  color: "#ebdcff"
 - name: Violet/200
-  color: "#d8b9ff"
+  color: "#d6baff"
 - name: Violet/300
-  color: "#c396ff"
+  color: "#bc9bf7"
 - name: Violet/400
-  color: "#a877f4"
+  color: "#a181d9"
 - name: Violet/500
-  color: "#8f58e2"
+  color: "#8667bd"
 - name: Violet/600
-  color: "#7834d5"
+  color: "#6d4ea2"
 - name: Violet/700
-  color: "#5d00c3"
+  color: "#543587"
 - name: Violet/800
-  color: "#41008c"
+  color: "#3d1c6f"
 - name: Violet/900
-  color: "#260059"
+  color: "#270058"
 - name: Purple/10
-  color: "#fffbfc"
+  color: "#fffbff"
 - name: Purple/20
-  color: "#fff7fd"
+  color: "#fff7ff"
 - name: Purple/50
-  color: "#ffeafe"
+  color: "#ffeaff"
 - name: Purple/100
-  color: "#ffd5ff"
+  color: "#ffd6ff"
 - name: Purple/200
-  color: "#ffa9ff"
+  color: "#f8adfb"
 - name: Purple/300
-  color: "#e68ae9"
+  color: "#db92df"
 - name: Purple/400
-  color: "#cc6bd1"
+  color: "#be78c2"
 - name: Purple/500
-  color: "#b44cbc"
+  color: "#a15ea6"
 - name: Purple/600
-  color: "#9c25a9"
+  color: "#86468b"
 - name: Purple/700
-  color: "#7c008e"
+  color: "#6b2d71"
 - name: Purple/800
-  color: "#580066"
+  color: "#511558"
 - name: Purple/900
   color: "#36003f"
 - name: Pink/10
-  color: "#fffbfb"
+  color: "#fffbfe"
 - name: Pink/20
-  color: "#fff7fa"
+  color: "#fff7fc"
 - name: Pink/50
-  color: "#ffebf3"
+  color: "#ffebf5"
 - name: Pink/100
-  color: "#ffd8e8"
+  color: "#ffd8ea"
 - name: Pink/200
-  color: "#ffb0d3"
+  color: "#ffafd4"
 - name: Pink/300
-  color: "#fe83ba"
+  color: "#f08cb8"
 - name: Pink/400
-  color: "#e365a0"
+  color: "#d2729d"
 - name: Pink/500
-  color: "#c94587"
+  color: "#b35a83"
 - name: Pink/600
-  color: "#af206f"
+  color: "#964169"
 - name: Pink/700
-  color: "#8d0052"
+  color: "#792a51"
 - name: Pink/800
-  color: "#640038"
+  color: "#5c123a"
 - name: Pink/900
-  color: "#3e0021"
+  color: "#3e0022"
