Update dependency graph

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -15,7 +15,7 @@
     // Make typescript-plugin-css-modules happy
     "baseUrl": ".",
     "paths": {
-      "@neetly/ui": ["../ui/src/index.scss"],
+      "@neetly/ui": ["./src/index.scss"],
       "@neetly/theme": ["../theme/src/index.scss"],
       "@neetly/palette": ["../palette/src/index.scss"]
     }
