--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -15,8 +15,7 @@
     // Make typescript-plugin-css-modules happy
     "baseUrl": ".",
     "paths": {
-      "@neetly/ui": ["../ui/src/index.scss"],
-      "@neetly/palette": ["../palette/src/index.scss"]
+      "@neetly/ui": ["../ui/src/index.scss"]
     }
   },
 
