--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -21,8 +21,7 @@
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
     "ariakit": "2.0.0-next.23",
-    "array.prototype.groupby": "^1.1.0",
-    "array.prototype.groupbytomap": "^1.1.0",
+    "core-js": "^3.22.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
