--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,4 +1,3 @@
 {
-  "extends": ["github>neetly/renovate-config"],
-  "ignoreDeps": ["react", "react-dom"]
+  "extends": ["github>neetly/renovate-config"]
 }
