--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,7 +14,7 @@
     "./lib"
   ],
   "scripts": {
-    "start": "storybook start",
+    "start": "run --top-level tsc --build && storybook start",
     "build": "lib build",
     "clean": "lib clean",
     "prepack": "run clean && run build && cp ../../LICENSE ."
