--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -42,6 +42,7 @@
     "@buncho/builder": "^5.3.0",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
+    "@typescript/lib-dom": "npm:@types/web@^0.0.64",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "typescript": "^4.6.4",
