--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@typescript-eslint/parser": "^5.25.0",
     "eslint": "^8.16.0",
     "prettier": "^2.6.2",
+    "svgo": "^2.8.0",
     "typescript": "^4.6.4"
   },
   "packageManager": "yarn@4.0.0-rc.6"
