--- a/.github/workflows/python-scripts.yaml
+++ b/.github/workflows/python-scripts.yaml
@@ -9,6 +9,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
+          python-version: 3
           cache: pipenv
       - run: pipx install pipenv
 
