Update palette generator

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@prettier/plugin-xml": "^2.2.0",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
+    "culori": "^2.0.3",
     "eslint": "^8.19.0",
     "prettier": "^2.7.1",
     "svgo": "^2.8.0",
