--- a/packages/cogen/package.json
+++ b/packages/cogen/package.json
@@ -23,7 +23,6 @@
   },
   "devDependencies": {
     "@buncho/builder": "^5.5.0",
-    "typescript": "^4.7.4",
-    "typescript-plugin-css-modules": "^3.4.0"
+    "typescript": "^4.7.4"
   }
 }
