--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -45,7 +45,6 @@
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^4.7.4",
-    "typescript-plugin-css-modules": "^3.4.0"
+    "typescript": "^4.7.4"
   }
 }
